# loups

./: .envrc  .flake8  .gitignore  404.html  LICENSE  README.md  devenv.nix  devenv.yaml  get_lightsout_ups.py  index.html  loups.py  loups.tape  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/actions/: build-nix-environment.yaml
.github/actions/build-nix-environment/: action.yaml  actions.yaml
.github/workflows/: docs.yaml  publish-package.yaml  publish-to-pypi.yaml  publish-to-testpypi.yaml  test.yaml  validate-docs.yaml
api/: index.html
api/cli/: index.html
api/loups/: index.html
api/thumbnail/: index.html
developer/: index.html
developer/architecture/: index.html
developer/contributing/: index.html
developer/how-it-works/: index.html
docs/: index.md
docs/api/: cli.md  index.md  loups.md  thumbnail.md
docs/developer/: architecture.md  contributing.md  how-it-works.md  index.md
docs/includes/: snippets.md
docs/user-guide/: cli-reference.md  custom-templates.md  index.md  installation.md  quick-start.md
includes/snippets/: index.html
javascripts/: extra.js
loups/: __init__.py  __main__.py  cli.py  frame_utils.py  geometry.py  loups.py  match_template_scan.py  thumbnail_extractor.py
loups/common_components/: __init__.py  shared_classes.py
loups/data/: README_THUMBNAIL_TEMPLATE.md
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  constants.py  test_cli.py  test_frame_utils.py  test_loups.py  test_match_template_scan.py  test_post_installation.py  test_thumbnail_extractor.py
user-guide/: index.html
user-guide/cli-reference/: index.html
user-guide/custom-templates/: index.html
user-guide/installation/: index.html
user-guide/quick-start/: index.html
