[project]
name = "loups"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "easyocr>=1.7.2",
    "opencv-python-headless>=4.12.0.88",
]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
