[project]
name = "loups"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "easyocr>=1.7.2",
    "opencv-python-headless>=4.12.0.88",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "scikit-image>=0.25.2",
]

[project.scripts]
loups = "loups.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
log_cli = false
# log_cli_level = "DEBUG"
addopts = [
    "--cov=loups",
    "--cov-fail-under=50",
]

[tool.setuptools.package-data]
loups = ["data/*.png"]
