[project]
name = "loups"
version = "0.0.1.dev4"
description = "Automated video chapter generation using template matching and OCR"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Justin Speegle", email = "justin@speegs.com"}
]
requires-python = ">=3.13"
keywords = [
    "video",
    "ocr",
    "template-matching",
    "chapter-generation",
    "opencv",
    "easyocr",
    "youtube-chapters",
    "video-processing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = [
    "easyocr>=1.7.2",
    "opencv-python-headless>=4.12.0.88",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "scikit-image>=0.25.2",
]

[project.urls]
Homepage = "https://github.com/jcspeegs/loups"
Repository = "https://github.com/jcspeegs/loups"
Issues = "https://github.com/jcspeegs/loups/issues"

[project.scripts]
loups = "loups.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loups"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
log_cli = false
# log_cli_level = "DEBUG"
addopts = [
    "--cov=loups",
    "--cov-fail-under=60",
]
